; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_default_on_free.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_default_on_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_query = type { i32 }

@rpc_query_hash_table = common dso_local global i32 0, align 4
@active_queries = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @default_on_free(%struct.rpc_query* %0) #0 {
  %2 = alloca %struct.rpc_query*, align 8
  store %struct.rpc_query* %0, %struct.rpc_query** %2, align 8
  %3 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %4 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %3, i32 0, i32 0
  %5 = call i32 @remove_event_timer(i32* %4)
  %6 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %7 = call i32 @hash_delete_rpc_query(i32* @rpc_query_hash_table, %struct.rpc_query* %6)
  %8 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %9 = call i32 @zfree(%struct.rpc_query* %8, i32 4)
  %10 = load i32, i32* @active_queries, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* @active_queries, align 4
  ret void
}

declare dso_local i32 @remove_event_timer(i32*) #1

declare dso_local i32 @hash_delete_rpc_query(i32*, %struct.rpc_query*) #1

declare dso_local i32 @zfree(%struct.rpc_query*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
